--- a/css/styles.css
+++ b/css/styles.css
@@ -316,10 +316,12 @@ img {
   width: calc((100% - 48px)/3);
   margin-right: 24px;
   margin-bottom: 48px;
+  
+  cursor: pointer;
 }
-.projects-list .item:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
+/* .projects-list .item:hover {
+
+} */
 .projects-list .item:nth-child(3n) {
   margin-right: 0;
 }
@@ -332,6 +334,34 @@ img {
   font-size: 20px;
   letter-spacing: 0.02em;
   line-height: 1.2;
+}
+.hover-box {
+  position: relative;
+  overflow: hidden;
+}
+.projects-list .item:hover .overlay {
+  transform: translateY(0);
+  
+}
+.projects-list .item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 40px 32px 164px 32px;
+  background-color: var(--primery-color);
+
+  transform: translateY(100%);
+  transition: transform 250ms ease;
+}
+.overlay-text {
+  color: #F4F4FD;
+  letter-spacing: 0.02em;
+  line-height: 1.5;
 }
 .project-list-box {
   padding: 32px 16px;
