--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,6 @@ img {
 .logo-color {
   color: var(--primery-color);
 }
-
 .header {
   border-bottom: 1px solid #E7E9FC;
 }
@@ -153,6 +152,37 @@ img {
   letter-spacing: 0.04em;
 
   cursor: pointer;
+}
+.btn-modal {
+  position: absolute;
+  right: 24px;
+  top: 24px;
+  border-radius: 50%;
+}
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(46, 47, 66, 0.4);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+.modal {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+
+  min-width: 408px;
+  min-height: 576px;
+  background: #FCFCFC;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 }
 .btn-primery:hover,
 .btn-primery:focus {
