--- a/css/styles.css
+++ b/css/styles.css
@@ -192,14 +192,16 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
 
+  fill: var(--headings-color);
+
   cursor: pointer;
 
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn-modal:hover {
   background: #404bbf;
-  color: var(--primery-white-color);
+  fill: var(--primery-white-color);
 }
 .backdrop {
   position: fixed;
